# android_device_xiaomi_mido

./: Android.mk  BoardConfig.mk  README.md  android_filesystem_config.h  compatibility_matrix.xml  device.mk  extract-files.sh  full_oxygen.mk  lineage.dependencies  lineage.mk  manifest.xml  mkbootimg.mk  prop.mk  proprietary-files-qc.txt  proprietary-files-twrp.txt  proprietary-files.txt  setup-makefiles.sh  system.prop  tftp.mk  twrp.mk  vendor.prop
audio/: audio_effects.conf  audio_platform_info.xml  audio_platform_info_extcodec.xml  audio_policy.conf  mixer_paths.xml  mixer_paths_mtp.xml  mixer_paths_qrd_sku3.xml  mixer_paths_qrd_skui.xml  mixer_paths_qrd_skum.xml  mixer_paths_qrd_skun.xml  mixer_paths_skuk.xml  mixer_paths_wcd9306.xml  mixer_paths_wcd9326.xml  mixer_paths_wcd9330.xml  mixer_paths_wcd9335.xml  sound_trigger_mixer_paths_wcd9335.xml  sound_trigger_platform_info.xml
biometrics/: Android.mk  BiometricsFingerprint.cpp  README.md  android.hardware.biometrics.fingerprint@2.0-service.rc  service.cpp
biometrics/fingerprintd/: IFingerprintDaemon.cpp
bluetooth/: bdroid_buildcfg.h
camera/: Android.mk
camera/QCamera2/: Android.mk
camera/QCamera2/HAL/: QCamera2HWI.cpp  QCamera2HWI.h  QCamera2HWICallbacks.cpp  QCameraMem.cpp  QCameraMem.h  QCameraParameters.cpp  QCameraParameters.h  QCameraParametersIntf.cpp  QCameraParametersIntf.h  QCameraPostProc.cpp
camera/QCamera2/HAL/test/: Android.mk
camera/QCamera2/HAL3/: QCamera3Channel.cpp  QCamera3HWI.cpp  QCamera3VendorTags.cpp  QCamera3VendorTags.h
camera/mm-image-codec/qomx_core/: Android.mk  qomx_core.c
configs/: media_codecs.xml  media_codecs_performance.xml  media_profiles.xml  sec_config  thermal-engine.conf
configs/sensors/: sensor_def_qcomdev.conf
consumerir/: Android.mk  consumerir.c
data-ipa-cfg-mgr/hal/src/: HAL.cpp
data-ipa-cfg-mgr/ipacm/inc/: IPACM_Config.h  IPACM_Defs.h  IPACM_Lan.h  IPACM_OffloadManager.h  IPACM_Wan.h  IPACM_Wlan.h
data-ipa-cfg-mgr/ipacm/src/: Android.mk  IPACM_Config.cpp  IPACM_Conntrack_NATApp.cpp  IPACM_Iface.cpp  IPACM_IfaceManager.cpp  IPACM_Lan.cpp  IPACM_Main.cpp  IPACM_OffloadManager.cpp  IPACM_Wan.cpp  IPACM_Wlan.cpp
doze/: AndroidManifest.xml
doze/res/values/: strings.xml
fingerprint/: FingerprintWrapper.cpp
gps/: Android.mk
gps/core/: SystemStatus.cpp  SystemStatus.h  SystemStatusOsObserver.cpp  SystemStatusOsObserver.h
gps/etc/: gps.conf  izat.conf  lowi.conf  sap.conf  xtwifi.conf
gps/gnss/: Agps.cpp  GnssAdapter.cpp  GnssAdapter.h  XtraSystemStatusObserver.cpp  XtraSystemStatusObserver.h  location_gnss.cpp
gps/izat_api/: Android.mk  IzatRemoteApi.h  izat_remote_api.h
gps/loc_api/: Android.mk
gps/loc_api/ds_api/: Android.mk  ds_client.c  ds_client.h
gps/loc_api/libloc_api_50001/: Android.mk
gps/loc_api/loc_api_v02/: Android.mk  LocApiV02.cpp  LocApiV02.h  Makefile.am  loc_api_sync_req.c  loc_api_v02_client.c  loc_api_v02_client.h  location_service_v02.c  location_service_v02.h
gps/loc_net_iface/: LocNetIfaceAgps.cpp  LocNetIfaceAgps.h  LocNetIfaceBase.cpp  LocNetIfaceBase.h  Makefile.am  configure.ac  loc-net-iface.pc.in
gps/loc_net_iface/le/: LocNetIface.cpp  LocNetIface.h
init/: Android.mk  init_mido.cpp  init_oxygen.cpp
keylayout/: gf3208.kl  uinput-fpc.kl
liblights/: Android.mk  lights.cpp
recovery/: Android.mk  init.recovery.qcom.rc  twrp.fstab
rootdir/: Android.mk  adb_keys  fstab.qcom  init.mido.rc  init.msm.usb.configfs.rc  init.offline.log.rc  init.qcom.early_boot.sh  init.qcom.factory.rc  init.qcom.rc  init.qcom.sensors.sh  init.qcom.sh  init.qcom.usb.rc  init.qcom.usb.sh  init.target.rc  ueventd.qcom.rc
rootdir/etc/: init.qcom.bt.sh  init.qcom.post_boot.sh
rootdir/recovery/: fstab.qcom
sepolicy/: device.te  displayfeature.te  file.te  file_contexts  fingerprintd.te  genfs_contexts  gx_fpd.te  qti_init_shell.te  system_server.te
vndk/: vndk-sp-libs.mk
wifi/: WCNSS_qcom_cfg.ini
(+20 files in other folders)
